--- a/blog.html
+++ b/blog.html
@@ -236,16 +236,16 @@
                                     <div class="blog-grid">
                                         <div class="blog-img">
                                             <div class="date">
-                                                <span>04</span>
-                                                <label>FEB</label>
+                                                <span>27</span>
+                                                <label>APR,2014</label>
                                             </div>
                                             <a href="#">
-                                                <img src="https://via.placeholder.com/400x200/E0FFFF/000000" title="" alt="">
+                                                <img src="https://scontent.fcmb3-2.fna.fbcdn.net/v/t31.18172-8/10387013_722278557829535_7557621040712618894_o.jpg?_nc_cat=101&ccb=1-5&_nc_sid=973b4a&_nc_ohc=n2j14cxi2eQAX_Xw5WX&_nc_ht=scontent.fcmb3-2.fna&oh=57f155808d76f900f7bbc7a2d6cad20e&oe=6197553A" title="" alt="">
                                             </a>
                                         </div>
                                         <div class="blog-info">
-                                            <h5><a href="#">Prevent 75% of visitors from google analytics</a></h5>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                            <h5><a href="#">Welcoming Rev.Fr. Rector</a></h5>
+                                            <p>Welcoming Rev.Fr. Newman Muthuthambi OMI, Rector of De La Salle College Colombo</p>
                                             <div class="btn-bar">
                                                 <a href="#" class="px-btn-arrow">
                                                     <span>Read More</span>
@@ -259,15 +259,15 @@
                                     <div class="blog-grid">
                                         <div class="blog-img">
                                             <div class="date">
-                                                <span>04</span>
-                                                <label>FEB</label>
+                                                <span>21</span>
+                                                <label>MAY,2014</label>
                                             </div>
                                             <a href="#">
-                                                <img src="https://via.placeholder.com/400x200/FFF0F5/000000" title="" alt="">
+                                                <img src="https://scontent.fcmb3-2.fna.fbcdn.net/v/t1.18169-9/10366290_720979401292784_3370636761222397255_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=973b4a&_nc_ohc=LveH9_w13PUAX9cr-hf&_nc_ht=scontent.fcmb3-2.fna&oh=3d43cb3b501004f9405a3270660c12f9&oe=61955B67" title="" alt="">
                                             </a>
                                         </div>
                                         <div class="blog-info">
-                                            <h5><a href="#">Prevent 75% of visitors from google analytics</a></h5>
+                                            <h5><a href="#">Basketball U-19 Champions of 2014</a></h5>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                             <div class="btn-bar">
                                                 <a href="#" class="px-btn-arrow">
