--- a/blog.html
+++ b/blog.html
@@ -213,16 +213,16 @@
                                     <div class="blog-grid">
                                         <div class="blog-img">
                                             <div class="date">
-                                                <span>04</span>
-                                                <label>FEB</label>
+                                                <span>08</span>
+                                                <label>DEC,2017</label>
                                             </div>
                                             <a href="#">
-                                                <img src="https://via.placeholder.com/400x200/D3D3D3/000000" title="" alt="">
+                                                <img src="https://scontent.fcmb3-2.fna.fbcdn.net/v/t31.18172-8/24879650_1649299558460759_2002565287385349912_o.jpg?_nc_cat=102&ccb=1-5&_nc_sid=973b4a&_nc_ohc=vBvc8TI8Rn4AX-m9ZXc&_nc_ht=scontent.fcmb3-2.fna&oh=43dbdd5acd66d59629fab9c527d2a168&oe=6195C2A2" title="" alt="">
                                             </a>
                                         </div>
                                         <div class="blog-info">
-                                            <h5><a href="#">Prevent 75% of visitors from google analytics</a></h5>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                            <h5><a href="#">Christmas Carols 2017</a></h5>
+                                            <p>Annual Christmas carols of De La Salle College held on Friday 08th December 2017 at College Chapel. Chief Guest Rev.Fr.Noel Dias, senior lecturer, law college of Sri Lanka. Performed by the college choir. Trained by Mr. Ajith Kodikara music master.</p>
                                             <div class="btn-bar">
                                                 <a href="#" class="px-btn-arrow">
                                                     <span>Read More</span>
