--- a/blog.html
+++ b/blog.html
@@ -305,13 +305,13 @@
                                 <div class="widget-body">
                                     <div class="media align-items-center">
                                         <div class="avatar">
-                                            <img src="https://bootdey.com/img/Content/avatar/avatar6.png" title="" alt="">
+                                            <img src="https://pbs.twimg.com/profile_images/1390534748192206849/7bMlP4F4_400x400.jpg" title="" alt="">
                                         </div>
                                         <div class="media-body">
-                                            <h6>Hello, I'm<br> Rachel Roth</h6>
+                                            <h6>Hello, I'm<br>Kasun</h6>
                                         </div>
                                     </div>
-                                    <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites, web services and online stores</p>
+                                    <p>DLS ICT UNIT</p>
                                 </div>
                             </div>
                             <!-- End Author -->
