--- a/blog.html
+++ b/blog.html
@@ -300,7 +300,7 @@
                             <!-- Author -->
                             <div class="widget widget-author">
                                 <div class="widget-title">
-                                    <h3>Author</h3>
+                                    <h3>Admin</h3>
                                 </div>
                                 <div class="widget-body">
                                     <div class="media align-items-center">
@@ -308,10 +308,10 @@
                                             <img src="https://pbs.twimg.com/profile_images/1390534748192206849/7bMlP4F4_400x400.jpg" title="" alt="">
                                         </div>
                                         <div class="media-body">
-                                            <h6>Hello, I'm<br>Kasun</h6>
+                                            <h6>Hello, <br> I'm Kasun C Fernando</h6>
                                         </div>
                                     </div>
-                                    <p>DLS ICT UNIT</p>
+                                    <p>A Student of de la salle college, DLS ICT UNIT</p>
                                 </div>
                             </div>
                             <!-- End Author -->
@@ -407,12 +407,12 @@
                                 </div>
                                 <div class="widget-body">
                                     <div class="nav tag-cloud">
-                                        <a href="#">Design</a>
-                                        <a href="#">Development</a>
-                                        <a href="#">Travel</a>
-                                        <a href="#">Web Design</a>
-                                        <a href="#">Marketing</a>
-                                        <a href="#">Research</a>
+                                        <a href="#">Lassalion</a>
+                                        <a href="#">Events</a>
+                                        <a href="#">Annual</a>
+                                        <a href="#">Cest</a>
+                                        <a href="#">DLS</a>
+                                        <a href="#">OBU</a>
                                         <a href="#">Managment</a>
                                     </div>
                                 </div>
@@ -422,7 +422,8 @@
                     </div>
                 </div>
             </section>
-        <!-- Footer -->
+       
+     <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
                 <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
