--- a/blog.html
+++ b/blog.html
@@ -309,7 +309,8 @@
                                         </div>
                                         <div class="media-body">
                                             <h6>Hello, <br> I'm Kasun C Fernando</h6>
-                                    
+                                        </div>
+                                    </div>
                                     <p>A Student of de la salle college, DLS ICT UNIT</p>
                                 </div>
                             </div>
