--- a/index.html
+++ b/index.html
@@ -14,6 +14,49 @@
     <link href="css/snowflakes.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <link rel="stylesheet1" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style type="text/css">
+       .modal-content{
+       background: url(http://diu.iiitvadodara.ac.in/img/Diu_EducationHub_3.jpg) no-repeat center center ; 
+       -webkit-background-size: cover;
+       -moz-background-size: cover;
+       -o-background-size: cover;
+       background-size: cover;
+       width: 100%;
+       height: auto;
+       }
+       .layer{
+       background-color: #ffffffba ;
+       background-size: cover;
+       height: inherit;
+       }
+       .layer .modal-header {
+       padding:  0px;
+       border-bottom: none !important;
+       }
+       .layer .modal-header .close {
+       margin-top: 0px;
+       padding: 10px 15px 0px 0px;
+       }
+       .logo-iiitv-int img{ 
+       width: 150px;
+       margin: auto;
+       display: flex;
+       }
+       @media (min-width: 768px){
+       .modal-dialog {
+       width: 720px;
+       margin: 30px auto;
+       }
+       }
+    </style>
+    <script>
+       $(document).ready(function(){
+          $("#myModalPopup").modal('show');
+       });
+    </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--Snow Flakes-->
 <!--div class="snowflakes" aria-hidden="true">
