--- a/index.html
+++ b/index.html
@@ -99,8 +99,17 @@
 </div-->
 
 
-
 </head>
+
+<script>
+function blinker() {
+  $('.jquery_blink').fadeOut(500);
+  $('.jquery_blink').fadeIn(500);
+}
+
+setInterval(blinker, 1000);
+</script>
+
 
 <body id="home">
 <!-- Start Your Body Code From here -->
