--- a/gallery.html
+++ b/gallery.html
@@ -326,6 +326,18 @@
         </div>
     </footer>
 </div>
+<!-- COPY RIGHTS -->
+<section class="wed-rights">
+    <div class="container">
+        <div class="row">
+            <div class="copy-right">
+               <a target="_blank" style="color:#fff;">All Rights Reserved </a>
+               <a target="_blank" href="gallery.php.html#" style="color:#fff;float:right;"> DLS ICT Society</a>
+               <a target="_blank" style="color:#fff;float:right;">Developed by &nbsp;</a>
+            </div>
+        </div>
+    </div>
+</section>
 <!--Scripts Starts-->
 <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
