--- a/gallery.html
+++ b/gallery.html
@@ -331,9 +331,9 @@
     <div class="container">
         <div class="row">
             <div class="copy-right">
-               <a target="_blank" style="color:#fff;">All Rights Reserved </a>
-               <a target="_blank" href="gallery.php.html#" style="color:#fff;float:right;"> DLS ICT Society</a>
-               <a target="_blank" style="color:#fff;float:right;">Developed by &nbsp;</a>
+               <a target="_blank" style="color:rgb(21, 4, 95);">All Rights Reserved </a>
+               <a target="_blank" href="gallery.php.html#" style="color:rgba(13, 11, 117, 0.356);float:right;"> DLS ICT Society</a>
+               <a target="_blank" style="color:rgb(29, 7, 90);float:right;">Developed by &nbsp;</a>
             </div>
         </div>
     </div>
