--- a/contact-us.html
+++ b/contact-us.html
@@ -261,7 +261,7 @@
                                   </form>
                                 </div>
                               </div>
-                              <div class="col-lg-4 bg-image" style="background-image:url(https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/contact/1.jpg)">
+                              <div class="col-lg-4 bg-image" style="background-image:url(img/dlsmap.png)">
                                 <div class="detail-box p-4">
                                   <h5 class="text-white font-weight-light mb-3">ADDRESS</h5>
                                   <p class="text-white op-7">601 Sherwood Ave.
