--- a/contact-us.html
+++ b/contact-us.html
@@ -218,7 +218,7 @@
               background: linear-gradient(to right, #ff6a5b 0%, #ff4d7e 100%);
             }   </style>  
 
-                <div class="contact2" style="background-image:url(https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/contact/map.jpg)" id="contact">
+                <div class="contact2" style="background-image:url(img/dlsmap.png)" id="contact">
                     <div class="container">
                       <div class="row contact-container">
                         <div class="col-lg-12">
@@ -261,7 +261,7 @@
                                   </form>
                                 </div>
                               </div>
-                              <div class="col-lg-4 bg-image" style="background-image:url(img/dlsmap.png)">
+                              <div class="col-lg-4 bg-image" style="background-image:url(https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/contact/1.jpg)">
                                 <div class="detail-box p-4">
                                   <h5 class="text-white font-weight-light mb-3">ADDRESS</h5>
                                   <p class="text-white op-7">601 Sherwood Ave.
