--- a/contact-us.html
+++ b/contact-us.html
@@ -138,6 +138,8 @@
             <!-- Contents starts here -->
             <div class="content">
                 <h1>About us</h1>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31683.462920869853!2d79.85988602998717!3d6.958156534038551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae25892b0c5f21d%3A0x64d65607eabaa544!2sDe%20La%20Salle%20College%2C%20Colombo!5e0!3m2!1sen!2slk!4v1634839876793!5m2!1sen!2slk" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+               
                 <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
                     existence, has been a haven of knowledge and inspiration to all and sundry
