--- a/contact-us.html
+++ b/contact-us.html
@@ -302,7 +302,7 @@ body{margin-top:20px;}
         <div class="col-sm-4">
           <div class="contact-detail-box">
             <i class="fa fa-map-marker fa-3x text-colored"></i>
-            <h4>Our Location</h4>
+            <h4>ADDRESS</h4>
 
             <address>
             795 Folsom Ave, Suite 600<br>
@@ -314,10 +314,10 @@ body{margin-top:20px;}
         <div class="col-sm-4">
           <div class="contact-detail-box">
             <i class="fa fa-book fa-3x text-colored"></i>
-            <h4>24x7 Support</h4>
+            <h4>WEBSITES</h4>
 
-            <p>Industry's standard dummy text.</p>
-            <h4 class="text-muted">1234 567 890</h4>
+            <p>www.delasalle.lk</p>
+            <h4 class="text-muted">lasallions.lk</h4>
           </div>
         </div><!-- end col -->
 
@@ -334,7 +334,7 @@ body{margin-top:20px;}
 
         <!-- Contact form -->
         <div class="col-sm-6">
-          <form role="form" name="ajax-form" id="ajax-form" action="https://formsubmit.io/send/coderthemes@gmail.com" method="post" class="form-main">
+          <form role="form" name="ajax-form" id="ajax-form" action="https://formsubmit.io/send/slgotip@gmail.com" method="post" class="form-main">
 
             <div class="form-group">
               <label for="name2">Name</label>
