--- a/contact-us.html
+++ b/contact-us.html
@@ -135,7 +135,10 @@
         </header>
         <!-- /header -->
         <br>
+        <section>
         <style>
+
+
 body{margin-top:20px;}
 
 
@@ -183,6 +186,13 @@ body{margin-top:20px;}
 .title-box .border,.btn-primary,.back-to-top,
 .logo i,.question-q-box,.social-circle li a:hover {
   background-color: #f16000 !important;
+}
+.title-box .title-alt,.text-colored,.footer a:hover,
+.navbar-custom .navbar-nav li a:hover,
+.navbar-custom .navbar-nav li a:focus,
+.navbar-custom .navbar-nav li a:active,
+.navbar-custom .navbar-nav li.active a {
+  color: #f16000;
 }
 
 .btn-primary {
@@ -364,7 +374,7 @@ body{margin-top:20px;}
     </div>
     <br>
     <br>
-
+        </section>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
