--- a/contact-us.html
+++ b/contact-us.html
@@ -187,11 +187,7 @@ body{margin-top:20px;}
 .logo i,.question-q-box,.social-circle li a:hover {
   background-color: #f16000 !important;
 }
-.title-box .title-alt,.text-colored,.footer a:hover,
-.navbar-custom .navbar-nav li a:hover,
-.navbar-custom .navbar-nav li a:focus,
-.navbar-custom .navbar-nav li a:active,
-.navbar-custom .navbar-nav li.active a {
+.title-box .title-alt,.text-colored,.footer a:hover {
   color: #f16000;
 }
 
