--- a/contact-us.html
+++ b/contact-us.html
@@ -188,7 +188,7 @@ body{margin-top:20px;}
   background-color: #f16000 !important;
 }
 .title-box .title-alt,.text-colored,.footer a:hover {
-  color: #f16000;
+  color: #03057e;
 }
 
 .btn-primary {
