--- a/about.html
+++ b/about.html
@@ -134,9 +134,15 @@
         </header>
         <!-- /header -->
         <!-- Content wrapper -->
-        <div class="contents-wrapper">
-            <!-- Contents starts here -->
-            <div class="content">
+        <div class="contents">
+            <div style="text-align: center;">
+                <h3></h3>
+            </div>
+            <div style="text-align: center;">
+                <a href="#" target="_blank">
+                    <img class="responsive-img" src="gif/about.gif">
+                </a>
+            </div>
                 <h1>About us</h1>
                 <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
