--- a/about.html
+++ b/about.html
@@ -136,10 +136,10 @@
         <!-- Content wrapper -->
         <div class="contents">
             <div style="text-align: center;">
-                <h3></h3>
+                <!--h3></h3>
             </div>
             <div style="text-align: center;">
-                <a href="#" target="_blank">
+                <a href="#" target="_blank"-->
                     <img class="responsive-img" src="gif/about.gif">
                 </a>
             </div>
