--- a/about.html
+++ b/about.html
@@ -143,6 +143,7 @@
                     <img class="responsive-img" src="gif/about.gif">
                 </a>
             </div>
+            <div style="text-align: center;"></div>
                 <h1>About us</h1>
                 <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
