--- a/about.html
+++ b/about.html
@@ -134,10 +134,10 @@
         </header>
         <!-- /header -->
         <!-- Content wrapper -->
-        <div class="contents">
+        <!--div class="contents">
             <div style="text-align: center;">
                 <!--h3></h3>
-            </div>
+            </div-->
             <div style="text-align: center;">
                 <a href="#" target="_blank"-->
                     <img class="responsive-img" src="gif/about.gif">
