--- a/about.html
+++ b/about.html
@@ -134,16 +134,26 @@
             </nav>
         </header>
         <!-- /header -->
-        <!-- Content wrapper -->
-        <!--div class="contents">
-            <div style="text-align: center;">
-                <!--h3></h3>
-            </div-->
-            <div style="text-align: center;">
-                <a href="#" target="_blank"-->
-                    <img class="responsive-img" src="gif/about.gif">
-                </a>
+
+        <!-- VIDEO -->
+    <section>
+        <div id="myCarouse" class="carousel-items" data-ride="carouse">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item slider1 active">
+                    <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
+                        <source src="gif/about.gif" type="gif">
+                    </video>
+                    
+                        
+                    </div>
+                </div>
             </div>
+        </div>
+    </section>
+        <!-- Content wrapper -->
+        <div class="contents">
+
             <div class="contents">
                 <div style="text-align: center;">
                 <h1>About us</h1>
