--- a/linkages/college-motto-and-flag_colours.html
+++ b/linkages/college-motto-and-flag_colours.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De La Salle College Colombo | Motto,Flag & Colours</title>
     <!--Style starts-->
     <link rel="icon" type="image/png" href="../img/IIITV_Logo_1x1_small.png">
