--- a/linkages/mission-vision.html
+++ b/linkages/mission-vision.html
@@ -4,6 +4,7 @@
 <head>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>De La Salle College Colombo 15| Mission & Vision</title>
         <!--Style starts-->
         <link rel="icon" type="image/png" href="../img/IIITV_Logo_1x1_small.png">
