--- a/college-anthem.html
+++ b/college-anthem.html
@@ -144,8 +144,8 @@
             <div class="content">
                 <h1>College Anthem</h1>
 
-                 <p>De  La  Salle   College    Anthem
-
+                 <p>De  La  Salle   College    Anthem </p>
+<br>
                     Words by 	– 		Rev. Bro. Marcus Felix ,  f.s.c., b.a.
                     Music by 	–		S. Norbert Rodrigo,  a.v.c.m.
                     
