--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="linkages/mission-vision.html">Vision & Mission</a></li>
-                                            <li><a href="linkages/college-motto-and-flag_colours.html">Flag</a></li>
-                                            <li><a href="linkages/germi.html">Crest</a></li>
-                                            <li><a href="linkages/tcs.html">College Anthem</a></li>
+                                            <li><a href="IDENTITY/mission-vision.html">Vision & Mission</a></li>
+                                            <li><a href="IDENTITY/college-motto-and-flag_colours.html">Flag</a></li>
+                                            <li><a href="IDENTITY/germi.html">Crest</a></li>
+                                            <li><a href="IDENTITY/college-anthem.html">College Anthem</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown-submenu">
