--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="linkages/mission-vision.html">Vision & Mission</a></li>
-                                            <li><a href="linkages/college-motto-and-flag_colours.html">Flag</a></li>
-                                            <li><a href="linkages/germi.html">Crest</a></li>
-                                            <li><a href="linkages/tcs.html">College Anthem</a></li>
+                                            <li><a href="Identity/mission-vision.html">Vision & Mission</a></li>
+                                            <li><a href="Identity/college-motto-and-flag_colours.html">Flag</a></li>
+                                            <li><a href="Identity/germi.html">Crest</a></li>
+                                            <li><a href="Identity/college-anthem.html">College Anthem</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown-submenu">
@@ -128,7 +128,7 @@
                                             <li><a href="linkages/da-iict.html">History Of College</a></li>
                                             <li><a href="Chronology College History.html">Chronology College History</a></li>
                                             <li><a href="linkages/germi.html">Past Recters</a></li>
-                                            <li><a href="linkages/tcs.html">TCS</a></li>
+                                            <li><a href="Identity/tcs.html">TCS</a></li>
                                         </ul>
                                     </li>
 
