--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="linkages/da-iict.html">History Of College</a></li>
+                                            <li><a href="Identity/da-iict.html">History Of College</a></li>
                                             <li><a href="Chronology College History.html">Chronology College History</a></li>
-                                            <li><a href="linkages/germi.html">Past Recters</a></li>
+                                            <li><a href="Identity/germi.html">Past Recters</a></li>
                                             <li><a href="Identity/tcs.html">TCS</a></li>
                                         </ul>
                                     </li>
