--- a/Identity/college-anthem.html
+++ b/Identity/college-anthem.html
@@ -67,12 +67,12 @@
                                         <li><a href="rti.html">RTI</a></li>
                                         <li><a href="pdf/MOU.pdf">MOU</a></li>
                                         <li class="dropdown-submenu">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Linkages</a>
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Identity</a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="linkages/da-iict.html">DA-IICT</a></li>
-                                                <li><a href="linkages/gsfc.html">GSFC</a></li>
-                                                <li><a href="linkages/germi.html">GERMI</a></li>
-                                                <li><a href="linkages/tcs.html">TCS</a></li>
+                                                <li><a href="Identity/da-iict.html">DA-IICT</a></li>
+                                                <li><a href="Identity/gsfc.html">GSFC</a></li>
+                                                <li><a href="Identity/germi.html">GERMI</a></li>
+                                                <li><a href="Identity/tcs.html">TCS</a></li>
                                             </ul>
                                         </li>
                                     </ul>
