--- a/Identity/college-anthem.html
+++ b/Identity/college-anthem.html
@@ -147,7 +147,7 @@
 
                  <p>De  La  Salle   College    Anthem </p>
 <br>
-                    <style (color: ff0000) by 	– 		Rev. Bro. Marcus Felix ,  f.s.c., b.a.></style> <br>
+                    <h6 id="site h6" style="color: #ff0000"by 	– 		Rev. Bro. Marcus Felix ,  f.s.c., b.a.></h6> <br>
                     Music by 	–		S. Norbert Rodrigo,  a.v.c.m. <br>
                     <br>
                     <br>
