--- a/college-anthem.html
+++ b/college-anthem.html
@@ -72,7 +72,7 @@
                                                 <li><a href="Identity/da-iict.html">DA-IICT</a></li>
                                                 <li><a href="Identity/gsfc.html">GSFC</a></li>
                                                 <li><a href="Identity/germi.html">GERMI</a></li>
-                                                <li><a href="Identity/tcs.html">TCS</a></li>
+                                                <li><a href="/college-anthem.html">TCS</a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -147,7 +147,7 @@
 
                  <p>De  La  Salle   College    Anthem </p>
 <br>
-                    Words by 	– 		Rev. Bro. Marcus Felix ,  f.s.c., b.a. <br>
+                    <h6 id="site h6" style="color: #ff0000"by 	– 		Rev. Bro. Marcus Felix ,  f.s.c., b.a.></h6> <br>
                     Music by 	–		S. Norbert Rodrigo,  a.v.c.m. <br>
                     <br>
                     <br>
