--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                             <li><a href="Identity/mission-vision.html">Vision & Mission</a></li>
                                             <li><a href="Identity/college-motto-and-flag_colours.html">Flag</a></li>
                                             <li><a href="Identity/germi.html">Crest</a></li>
-                                            <li><a href="Identity/college-anthem.html">College Anthem</a></li>
+                                            <li><a href="college-anthem.html">College Anthem</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown-submenu">
