--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -155,7 +155,7 @@
                                         <div class="pg-eve-desc pg-blog-desc ed-rese-grid-about">
                                             <h4>College Crest</h4>
                                             <div class="col-md-12">
-											<center><img src="images/College&#32;Crest.png" alt="" style="width: 200px"></center>
+											<center><img src="/img/IIITV_Logo_1x1_small.jpg" alt="" style="width: 200px"></center>
                                             </div>
                                             <div class="row">
                                                 <div class="col-md-12">
