--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -142,119 +142,55 @@
             </nav>
         </header>
         <!-- /header -->
-             <!--SECTION ABOUT-->
-    <section style="background: rgb(255, 255, 255);">
-        <div class="container com-sp">
-            <div class="row">
-                <div class="cor about-sp">
-                    <div class="ed-about-tit">
-                        <div>
-                            <div class="ho-event pg-eve-main pg-blog">
-                                <ul>
-									 <li>
-                                        <div class="pg-eve-desc pg-blog-desc ed-rese-grid-about">
-                                            <h4>College Crest</h4>
-                                            <div class="col-md-12">
-											<center><img src="/img/IIITV_Logo_1x1_small.jpg" alt="" style="width: 200px"></center>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-md-12">
-                                                    <table border="1" width="638" cellspacing="0" cellpadding="0" style="margin-bottom:15px;margin-top:15px;">
-                                                        <tr>
-                                                            <td valign="top" width="213"  class="table-info">Cross on the elephant</td>
-                                                            <td valign="bottom" width="46"><p align="center">&#8211;</p></td>
-                                                            <td valign="top" width="379"  class="table-info">The Catholic Sri Lankan Identity </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"></td>
-                                                            <td valign="bottom" width="46"></td>
-                                                            <td valign="top" width="379"></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"  class="table-info">Three Lilies of St. Joseph</td>
-                                                            <td valign="bottom" width="46"><p align="center">&#8211;</p></td>
-                                                            <td valign="top" width="379"  class="table-info">Faith, Hope &amp; Charity </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"></td>
-                                                            <td valign="bottom" width="46"></td>
-                                                            <td valign="top" width="379"></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"  class="table-info"></td>
-                                                            <td valign="bottom" width="46"><p align="center"></p></td>
-                                                            <td valign="top" width="379"  class="table-info">The Cardinal Values </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"></td>
-                                                            <td valign="bottom" width="46"></td>
-                                                            <td valign="top" width="379"></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"  class="table-info">The Open Book</td>
-                                                            <td valign="bottom" width="46"><p align="center">&#8211;</p></td>
-                                                            <td valign="top" width="379"  class="table-info">Book of Wisdom and Knowledge </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"></td>
-                                                            <td valign="bottom" width="46"></td>
-                                                            <td valign="top" width="379"></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"  class="table-info">The Inscription on the Book</td>
-                                                            <td valign="bottom" width="46"><p align="center">&#8211;</p></td>
-                                                            <td valign="top" width="379"  class="table-info">"Fiat Lux"</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"></td>
-                                                            <td valign="bottom" width="46"></td>
-                                                            <td valign="top" width="379"></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"  class="table-info"></td>
-                                                            <td valign="bottom" width="46"><p align="center"></p></td>
-                                                            <td valign="top" width="379"  class="table-info">Let there be light </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"></td>
-                                                            <td valign="bottom" width="46"></td>
-                                                            <td valign="top" width="379"></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"  class="table-info">College Motto</td>
-                                                            <td valign="bottom" width="46"><p align="center">&#8211;</p></td>
-                                                            <td valign="top" width="379"  class="table-info">"In Scientia Et Virtute"</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"></td>
-                                                            <td valign="bottom" width="46"></td>
-                                                            <td valign="top" width="379"></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td valign="top" width="213"  class="table-info"></td>
-                                                            <td valign="bottom" width="46"><p align="center"></p></td>
-                                                            <td valign="top" width="379"  class="table-info">In Knowledge and in Virtue </td>
-                                                        </tr>
-                                                    </table>
-
-												</div>
-                                            </div>
-                                            <p>Through Knowledge and the practice of the three Cardinal Virtues of Faith, Hope &amp; Charity,
-                                                one reaches the fullness of divinity by the realization of an integrated humanity. Thus one
-                                                becomes a light to the world (let there be light).
-                                            </p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+        <!-- Content wrapper -->
+        <div class="contents-wrapper">
+            <!-- Contents starts here -->
+            <div class="contents">
+                <div style="text-align: center;">
+                    <h3>Our Vision</h3>
                 </div>
+                <div style="text-align: center;">
+                    <a href="#" target="_blank">
+                        <img class="responsive-img" src="../img/dlsobucrest.jpg" style="width: 250px; height:250px;">
+                    </a>
+                </div>
+                <br/>
+                <br/> Having placed in a multi-racial, multi-religious and multi-lingual society with
+                different cultures, traditions and customs in the Colombo North area and having
+                imbibed with the Lasallian Charism, we strive to base our educational efforts and
+                vision on the Lasallian Education Model which develops the potential of a student’s
+                Mind, Heart and Spirit. Addressing these three areas empowers students to live a
+                fully human life with personal integrity used in service of their communities and
+                societies thus producing peace loving and productive citizens for Sri Lanka.
+                <br/>
             </div>
         </div>
-    </section>
-    <!--SECTION END-->
-    <br><br><br><br>
+
+        <div class="contents-wrapper">
+            <!-- Contents starts here -->
+            <div class="contents">
+                <div style="text-align: center;">
+                    <h3>Our Mission</h3>
+                </div>
+                <div style="text-align: center;">
+                    <a href="#" target="_blank">
+                        <img class="responsive-img" src="../img/IIITV_Logo_1x1_small.jpg" style="width: 250px; height:250px;">
+                    </a>
+                </div>
+                <br/>
+                <br/> De La Salle College, Colombo aspires to provide an environment which
+                actively encourages all members to strive to achieve personal excellence through a
+                challenging, comprehensive curriculum and a variety of teaching styles.
+                
+                The curriculum aims to address student’s need for personal growth, to arrive at an
+                appreciation of their culture, to address the expectations of the world of work and
+                the challenges of a rapidly changing society which establishes a climate in which
+                students are encouraged to strive for increasing levels of self - discipline and
+                responsibility and where students, staff and parents experience co-operation and
+                mutual support
+                <br/>
+            </div>
+        </div>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
